--- a/index.html
+++ b/index.html
@@ -12,7 +12,14 @@
 <body class="body">
 	<div class="page">
 
-		<section class="header">
+		<section class="header border">
+			<img class="header__logo" src="./images/Logo_header.svg" alt="Лого хедера">
+			<hr class="header__line">
+		</section>
+
+		<section class="profile border">
+			
+		</section>
     
 	</div>
 
