--- a/index.html
+++ b/index.html
@@ -12,15 +12,24 @@
 <body class="body">
 	<div class="page">
 
-		<section class="header border">
+		<section class="header">
 			<img class="header__logo" src="./images/Logo_header.svg" alt="Лого хедера">
 			<hr class="header__line">
 		</section>
 
-		<section class="profile border">
-			
+		<section class="profile">
+			<img class="profile__avatar" src="./images/Avatar.png" alt="Аватар">
+			<div class="profile__profile-info">
+				<div class="profile__profile-info_name-change">
+					<h1 class="profile__profile-info_name">Жак-Ив Кусто</h1>
+					<button class="profile__profile-info_button" type="menu"></button>
+				</div>
+				<p class="profile__profile-info_activity">Исследователь океана
+				</p>
+			</div>
+			<button class="profile__add-button" type="menu"></button>
 		</section>
-    
+
 	</div>
 
 	<script src="./index.js"></script>
