elements not ended, waiting answer from the platform

--- a/index.html
+++ b/index.html
@@ -30,6 +30,55 @@
 			<button class="profile__add-button" type="menu"></button>
 		</section>
 
+		<section class="elements">
+			<article class="element">
+				<img class="element__mask-group" src="./images/kirill-pershin-1088404-unsplash.png" alt="Карачаевск">
+				<div class="element__description">
+					<h2 class="element__place">Карачаевск</h2>
+					<button class="element__group"></button>
+				</div>
+			</article>
+			<article class="element">
+				<img class="element__mask-group" src="./images/kirill-pershin-1404681-unsplash.png" alt="Гора Эльбрус">
+				<div class="element__description">
+					<h2 class="element__place">Гора Эльбрус</h2>
+					<button class="element__group"></button>
+				</div>
+			</article>
+			<article class="element">
+				<img class="element__mask-group" src="./images/kirill-pershin-1556355-unsplash.png" alt="Домбай">
+				<div class="element__description">
+					<h2 class="element__place">Домбай</h2>
+					<button class="element__group"></button>
+				</div>
+			</article>
+			<article class="element">
+				<img class="element__mask-group" src="./images/kirill-pershin-1404681-unsplash.png" alt="Гора Эльбрус">
+				<div class="element__description">
+					<h2 class="element__place">Гора Эльбрус</h2>
+					<button class="element__group"></button>
+				</div>
+			</article>
+			<article class="element">
+				<img class="element__mask-group" src="./images/kirill-pershin-1556355-unsplash.png" alt="Домбай">
+				<div class="element__description">
+					<h2 class="element__place">Домбай</h2>
+					<button class="element__group"></button>
+				</div>
+			</article>
+			<article class="element">
+				<img class="element__mask-group" src="./images/kirill-pershin-1088404-unsplash.png" alt="Карачаево-Черкессия">
+				<div class="element__description">
+					<h2 class="element__place">Карачаево-Черкессия</h2>
+					<button class="element__group"></button>
+				</div>
+			</article>
+		</section>
+
+		<section class="footer">
+
+		</section>
+
 	</div>
 
 	<script src="./index.js"></script>
