--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 		</section>
 
 		<section class="footer">
-
+			<p class="footer__copyright">&copy; 2022 Mesto Russia</p>
 		</section>
 
 	</div>
