popup layout ended

--- a/index.html
+++ b/index.html
@@ -79,6 +79,20 @@
 			<p class="footer__copyright">&copy; 2022 Mesto Russia</p>
 		</section>
 
+		<div class="popup">
+			<div class="popup__window">
+				<button class="popup__close-button"></button>
+				<form class="popup__container">
+					<h2 class="popup__title">Редактировать профиль</h2>
+					<fieldset class="popup__input-container">
+						<input type="text" class="popup__name">
+						<input type="text" class="popup__activity">
+					</fieldset>
+					<button class="popup__submit-button">Сохранить</button>
+				</form>
+			</div>
+		</div>
+
 	</div>
 
 	<script src="./index.js"></script>
