made popup onen/close and saving value from inputs

--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
 			<div class="profile__profile-info">
 				<div class="profile__profile-info_name-change">
 					<h1 class="profile__profile-info_name">Жак-Ив Кусто</h1>
-					<button class="profile__profile-info_button" type="menu"></button>
+					<button class="profile__profile-info_button"></button>
 				</div>
 				<p class="profile__profile-info_activity">Исследователь океана
 				</p>
 			</div>
-			<button class="profile__add-button" type="menu"></button>
+			<button class="profile__add-button"></button>
 		</section>
 
 		<section class="elements">
@@ -88,14 +88,14 @@
 						<input type="text" class="popup__name">
 						<input type="text" class="popup__activity">
 					</fieldset>
-					<button class="popup__submit-button">Сохранить</button>
+					<button class="popup__submit-button" type="submit">Сохранить</button>
 				</form>
 			</div>
 		</div>
 
 	</div>
 
-	<script src="./index.js"></script>
+	<script src="./scripts/index.js"></script>
 </body>
 
 </html>
