profile-info modificators have been renamed and changed to elements

--- a/index.html
+++ b/index.html
@@ -20,12 +20,11 @@
 		<section class="profile">
 			<img class="profile__avatar" src="./images/Avatar.png" alt="Аватар">
 			<div class="profile__profile-info">
-				<div class="profile__profile-info_name-change">
-					<h1 class="profile__profile-info_name">Жак-Ив Кусто</h1>
-					<button class="profile__profile-info_button"></button>
+				<div class="profile__name-change">
+					<h1 class="profile__name">Жак-Ив Кусто</h1>
+					<button class="profile__edit-button"></button>
 				</div>
-				<p class="profile__profile-info_activity">Исследователь океана
-				</p>
+				<p class="profile__activity">Исследователь океана</p>
 			</div>
 			<button class="profile__add-button"></button>
 		</section>
