--- a/index.html
+++ b/index.html
@@ -12,81 +12,80 @@
 <body class="body">
 	<div class="page">
 
-		<section class="header">
+		<header class="header">
 			<img class="header__logo" src="./images/Logo_header.svg" alt="Лого хедера">
-			<hr class="header__line">
-		</section>
+		</header>
 
-		<section class="profile">
-			<img class="profile__avatar" src="./images/Avatar.png" alt="Аватар">
-			<div class="profile__profile-info">
-				<div class="profile__name-change">
-					<h1 class="profile__name">Жак-Ив Кусто</h1>
-					<button class="profile__edit-button"></button>
+		<main class="content">
+			<section class="profile">
+				<img class="profile__avatar" src="./images/Avatar.png" alt="Аватар">
+				<div class="profile__profile-info">
+					<div class="profile__name-change">
+						<h1 class="profile__name">Жак-Ив Кусто</h1>
+						<button class="profile__edit-button" type="button"></button>
+					</div>
+					<p class="profile__activity">Исследователь океана</p>
 				</div>
-				<p class="profile__activity">Исследователь океана</p>
-			</div>
-			<button class="profile__add-button"></button>
-		</section>
+				<button class="profile__add-button" type="button"></button>
+			</section>
 
-		<section class="elements">
-			<article class="element">
-				<img class="element__mask-group" src="./images/kirill-pershin-1088404-unsplash.png" alt="Карачаевск">
-				<div class="element__description">
-					<h2 class="element__place">Карачаевск</h2>
-					<button class="element__group"></button>
-				</div>
-			</article>
-			<article class="element">
-				<img class="element__mask-group" src="./images/kirill-pershin-1404681-unsplash.png" alt="Гора Эльбрус">
-				<div class="element__description">
-					<h2 class="element__place">Гора Эльбрус</h2>
-					<button class="element__group"></button>
-				</div>
-			</article>
-			<article class="element">
-				<img class="element__mask-group" src="./images/kirill-pershin-1556355-unsplash.png" alt="Домбай">
-				<div class="element__description">
-					<h2 class="element__place">Домбай</h2>
-					<button class="element__group"></button>
-				</div>
-			</article>
-			<article class="element">
-				<img class="element__mask-group" src="./images/kirill-pershin-1404681-unsplash.png" alt="Гора Эльбрус">
-				<div class="element__description">
-					<h2 class="element__place">Гора Эльбрус</h2>
-					<button class="element__group"></button>
-				</div>
-			</article>
-			<article class="element">
-				<img class="element__mask-group" src="./images/kirill-pershin-1556355-unsplash.png" alt="Домбай">
-				<div class="element__description">
-					<h2 class="element__place">Домбай</h2>
-					<button class="element__group"></button>
-				</div>
-			</article>
-			<article class="element">
-				<img class="element__mask-group" src="./images/kirill-pershin-1088404-unsplash.png" alt="Карачаево-Черкессия">
-				<div class="element__description">
-					<h2 class="element__place">Карачаево-Черкессия</h2>
-					<button class="element__group"></button>
-				</div>
-			</article>
-		</section>
+			<section class="elements">
+				<article class="element">
+					<img class="element__image" src="./images/kirill-pershin-1088404-unsplash.png" alt="Карачаевск">
+					<div class="element__description">
+						<h2 class="element__place">Карачаевск</h2>
+						<button class="element__like" type="button"></button>
+					</div>
+				</article>
+				<article class="element">
+					<img class="element__image" src="./images/kirill-pershin-1404681-unsplash.png" alt="Гора Эльбрус">
+					<div class="element__description">
+						<h2 class="element__place">Гора Эльбрус</h2>
+						<button class="element__like" type="button"></button>
+					</div>
+				</article>
+				<article class="element">
+					<img class="element__image" src="./images/kirill-pershin-1556355-unsplash.png" alt="Домбай">
+					<div class="element__description">
+						<h2 class="element__place">Домбай</h2>
+						<button class="element__like" type="button"></button>
+					</div>
+				</article>
+				<article class="element">
+					<img class="element__image" src="./images/kirill-pershin-1404681-unsplash.png" alt="Гора Эльбрус">
+					<div class="element__description">
+						<h2 class="element__place">Гора Эльбрус</h2>
+						<button class="element__like" type="button"></button>
+					</div>
+				</article>
+				<article class="element">
+					<img class="element__image" src="./images/kirill-pershin-1556355-unsplash.png" alt="Домбай">
+					<div class="element__description">
+						<h2 class="element__place">Домбай</h2>
+						<button class="element__like" type="button"></button>
+					</div>
+				</article>
+				<article class="element">
+					<img class="element__image" src="./images/kirill-pershin-1088404-unsplash.png" alt="Карачаево-Черкессия">
+					<div class="element__description">
+						<h2 class="element__place">Карачаево-Черкессия</h2>
+						<button class="element__like" type="button"></button>
+					</div>
+				</article>
+			</section>
+		</main>
 
-		<section class="footer">
+		<footer class="footer">
 			<p class="footer__copyright">&copy; 2022 Mesto Russia</p>
-		</section>
+		</footer>
 
 		<div class="popup">
 			<div class="popup__window">
-				<button class="popup__close-button"></button>
-				<form class="popup__container">
-					<h2 class="popup__title">Редактировать профиль</h2>
-					<fieldset class="popup__input-container">
-						<input type="text" class="popup__name">
-						<input type="text" class="popup__activity">
-					</fieldset>
+				<button class="popup__close-button" type="button"></button>
+				<h2 class="popup__title">Редактировать профиль</h2>
+				<form class="popup__form" name="popup-form">
+					<input type="text" class="popup__input popup__input_data_name" name="username">
+					<input type="text" class="popup__input popup__input_data_activity" name="userjob">
 					<button class="popup__submit-button" type="submit">Сохранить</button>
 				</form>
 			</div>
