--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
 				<button class="popup__close-button" type="button"></button>
 				<h2 class="popup__title">Редактировать профиль</h2>
 				<form class="popup__form" name="popup-form">
-					<input type="text" class="popup__input popup__input_data_name" name="username">
-					<input type="text" class="popup__input popup__input_data_activity" name="userjob">
+					<input type="text" class="popup__input popup__input_data_name" name="username" required>
+					<input type="text" class="popup__input popup__input_data_activity" name="userjob" required>
 					<button class="popup__submit-button" type="submit">Сохранить</button>
 				</form>
 			</div>
