--- a/index.html
+++ b/index.html
@@ -91,7 +91,29 @@
 			</div>
 		</div>
 
+		<div class="popup popup_addcard">
+			<div class="popup__window">
+				<button class="popup__close-button popup__close-button_addcard" type="button"></button>
+				<h2 class="popup__title">Новое место</h2>
+				<form class="popup__form popup__form_addcard" name="popup-form-addcard">
+					<input type="text" class="popup__input popup__input_data_place" name="place-add-card" required placeholder="Название">
+					<input type="text" class="popup__input popup__input_data_link" name="link-add-card" required placeholder="Ссылка на картинку">
+					<button class="popup__submit-button" type="submit">Создать</button>
+				</form>
+			</div>
+		</div>
+
 	</div>
+
+	<template id="default-element">
+		<article class="element">
+			<img class="element__image">
+			<div class="element__description">
+				<h2 class="element__place"></h2>
+				<button class="element__like" type="button"></button>
+			</div>
+		</article>
+	</template>
 
 	<script src="./scripts/index.js"></script>
 </body>
