imagePopup layout done and opening this popup by clicking on card's image

--- a/index.html
+++ b/index.html
@@ -105,6 +105,14 @@
 			</div>
 		</div>
 
+		<div class="popup-image">
+			<div class="popup-image__window">
+				<img class="popup-image__image" src="./images/Test_image.avif" alt="sdd">
+				<button class="popup-image__close-button" type="button"></button>
+				<h2 class="popup-image__title">Новое место</h2>
+			</div>
+		</div>
+
 	</div>
 
 	<template id="default-element">
