--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
 
 		<div class="popup-image">
 			<div class="popup-image__window">
-				<img class="popup-image__image" src="./images/Test_image.avif" alt="sdd">
+				<img class="popup-image__image" src="" alt="">
 				<button class="popup-image__close-button" type="button"></button>
-				<h2 class="popup-image__title">Новое место</h2>
+				<h2 class="popup-image__title"></h2>
 			</div>
 		</div>
 
