--- a/index.html
+++ b/index.html
@@ -30,48 +30,6 @@
 			</section>
 
 			<section class="elements">
-				<!-- <article class="element">
-					<img class="element__image" src="./images/kirill-pershin-1088404-unsplash.png" alt="Карачаевск">
-					<div class="element__description">
-						<h2 class="element__place">Карачаевск</h2>
-						<button class="element__like" type="button"></button>
-					</div>
-				</article>
-				<article class="element">
-					<img class="element__image" src="./images/kirill-pershin-1404681-unsplash.png" alt="Гора Эльбрус">
-					<div class="element__description">
-						<h2 class="element__place">Гора Эльбрус</h2>
-						<button class="element__like" type="button"></button>
-					</div>
-				</article>
-				<article class="element">
-					<img class="element__image" src="./images/kirill-pershin-1556355-unsplash.png" alt="Домбай">
-					<div class="element__description">
-						<h2 class="element__place">Домбай</h2>
-						<button class="element__like" type="button"></button>
-					</div>
-				</article>
-				<article class="element">
-					<img class="element__image" src="./images/kirill-pershin-1404681-unsplash.png" alt="Гора Эльбрус">
-					<div class="element__description">
-						<h2 class="element__place">Гора Эльбрус</h2>
-						<button class="element__like" type="button"></button>
-					</div>
-				</article>
-				<article class="element">
-					<img class="element__image" src="./images/kirill-pershin-1556355-unsplash.png" alt="Домбай">
-					<div class="element__description">
-						<h2 class="element__place">Домбай</h2>
-						<button class="element__like" type="button"></button>
-					</div>
-				</article>
-				<article class="element">
-					<img class="element__image" src="./images/kirill-pershin-1088404-unsplash.png" alt="Карачаево-Черкессия">
-					<div class="element__description">
-						<h2 class="element__place">Карачаево-Черкессия</h2>
-						<button class="element__like" type="button"></button>
-					</div>
-				</article> -->
 			</section>
 		</main>
 
@@ -107,7 +65,7 @@
 
 		<div class="popup-image">
 			<div class="popup-image__window">
-				<img class="popup-image__image" src="" alt="">
+				<img class="popup-image__image" src="#" alt="Изображение">
 				<button class="popup-image__close-button" type="button"></button>
 				<h2 class="popup-image__title"></h2>
 			</div>
