--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 		</footer>
 
 		<div class="popup popup_profile">
+			<div class="popup__overlay popup__overlay_profile"></div>
 			<div class="popup__window">
 				<button class="popup__close-button popup__close-button_profile" type="button"></button>
 				<h2 class="popup__title">Редактировать профиль</h2>
@@ -54,6 +55,7 @@
 		</div>
 
 		<div class="popup popup_addcard">
+			<div class="popup__overlay popup__overlay_addcard"></div>
 			<div class="popup__window">
 				<button class="popup__close-button popup__close-button_addcard" type="button"></button>
 				<h2 class="popup__title">Новое место</h2>
@@ -70,6 +72,7 @@
 		</div>
 
 		<div class="popup popup_image">
+			<div class="popup__overlay popup__overlay_image"></div>
 			<div class="popup__image-window">
 				<img class="popup__image" src="#" alt="Изображение">
 				<button class="popup__close-button popup__close-button_image" type="button"></button>
