--- a/index.html
+++ b/index.html
@@ -93,9 +93,11 @@
 		</article>
 	</template>
 
-	<script src="./scripts/cards.js"></script>
+	<!-- <script src="./scripts/cards.js"></script>
 	<script src="./scripts/validate.js"></script>
-	<script src="./scripts/index.js"></script>
+	<script src="./scripts/index.js"></script> -->
+
+	<script type="module" src="./scripts/index.js"></script>
 </body>
 
 </html>
