--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
 		</article>
 	</template>
 
-	<!-- <script src="./scripts/cards.js"></script>
-	<script src="./scripts/validate.js"></script>
+	<!-- <script src="./scripts/Card.js"></script>
+	<script src="./scripts/FormValidator.js"></script>
 	<script src="./scripts/index.js"></script> -->
 
 	<script type="module" src="./scripts/index.js"></script>
