Webpack has been configured. not only for images from index.html

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="author" content="Глеб Бычков">
-	<link rel="stylesheet" href="./pages/index.css">
+	<!-- <link rel="stylesheet" href="./index.css"> -->
 	<title>Место</title>
 </head>
 
@@ -13,12 +13,12 @@
 	<div class="page">
 
 		<header class="header">
-			<img class="header__logo" src="./images/Logo_header.svg" alt="Лого хедера">
+			<img class="header__logo" src="../images/Logo_header.svg" alt="Лого хедера">
 		</header>
 
 		<main class="content">
 			<section class="profile">
-				<img class="profile__avatar" src="./images/Avatar.png" alt="Аватар">
+				<img class="profile__avatar" src="../images/Avatar.png" alt="Аватар">
 				<div class="profile__profile-info">
 					<div class="profile__name-change">
 						<h1 class="profile__name">Жак-Ив Кусто</h1>
@@ -93,7 +93,7 @@
 		</article>
 	</template>
 
-	<script type="module" src="./scripts/index.js"></script>
+	<!-- <script type="module" src="./index.js"></script> -->
 </body>
 
 </html>
