--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -5,7 +5,6 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="author" content="Глеб Бычков">
-	<!-- <link rel="stylesheet" href="./index.css"> -->
 	<title>Место</title>
 </head>
 
@@ -13,12 +12,12 @@
 	<div class="page">
 
 		<header class="header">
-			<img class="header__logo" src="../images/Logo_header.svg" alt="Лого хедера">
+			<img class="header__logo" src="<%=require('../images/Logo_header.svg')%>" alt="Лого хедера">
 		</header>
 
 		<main class="content">
 			<section class="profile">
-				<img class="profile__avatar" src="../images/Avatar.png" alt="Аватар">
+				<img class="profile__avatar" src="<%=require('../images/Avatar.png')%>" alt="Аватар">
 				<div class="profile__profile-info">
 					<div class="profile__name-change">
 						<h1 class="profile__name">Жак-Ив Кусто</h1>
@@ -92,8 +91,6 @@
 			</div>
 		</article>
 	</template>
-
-	<!-- <script type="module" src="./index.js"></script> -->
 </body>
 
 </html>
