bug fixed: index.html moved to src from src/pages. Also changed path in webpack.config.js in HtmlWebpackPlugin template

--- a/src/index.html
+++ b/src/index.html
@@ -12,12 +12,12 @@
 	<div class="page">
 
 		<header class="header">
-			<img class="header__logo" src="<%=require('../images/Logo_header.svg')%>" alt="Лого хедера">
+			<img class="header__logo" src="<%=require('./images/Logo_header.svg')%>" alt="Лого хедера">
 		</header>
 
 		<main class="content">
 			<section class="profile">
-				<img class="profile__avatar" src="<%=require('../images/Avatar.png')%>" alt="Аватар">
+				<img class="profile__avatar" src="<%=require('./images/Avatar.png')%>" alt="Аватар">
 				<div class="profile__profile-info">
 					<div class="profile__name-change">
 						<h1 class="profile__name">Жак-Ив Кусто</h1>
