added changing user info, and adding new card to sever, but newcard doesn't render on the page

--- a/src/index.html
+++ b/src/index.html
@@ -42,10 +42,10 @@
 				<button class="popup__close-button popup__close-button_profile" type="button"></button>
 				<h2 class="popup__title">Редактировать профиль</h2>
 				<form class="popup__form popup__form_profile" name="popup-form-profile" novalidate>
-					<input type="text" class="popup__input popup__input_data_name" name="username" id="name-input" minlength="2"
+					<input type="text" class="popup__input popup__input_data_name" name="name" id="name-input" minlength="2"
 						maxlength="40" required>
 					<span class="popup__input-error name-input-error"></span>
-					<input type="text" class="popup__input popup__input_data_activity" name="userjob" id="activity-input"
+					<input type="text" class="popup__input popup__input_data_activity" name="about" id="activity-input"
 						minlength="2" maxlength="200" required>
 					<span class="popup__input-error activity-input-error"></span>
 					<button class="popup__submit-button" type="submit">Сохранить</button>
@@ -59,10 +59,10 @@
 				<button class="popup__close-button popup__close-button_addcard" type="button"></button>
 				<h2 class="popup__title">Новое место</h2>
 				<form class="popup__form popup__form_addcard" name="popup-form-addcard" novalidate>
-					<input type="text" class="popup__input popup__input_data_place" name="place-add-card" id="place-input"
+					<input type="text" class="popup__input popup__input_data_place" name="name" id="place-input"
 						minlength="2" maxlength="30" placeholder="Название" required>
 					<span class="popup__input-error place-input-error"></span>
-					<input type="url" class="popup__input popup__input_data_link" name="link-add-card" id="link-input"
+					<input type="url" class="popup__input popup__input_data_link" name="link" id="link-input"
 						placeholder="Ссылка на картинку" required>
 					<span class="popup__input-error link-input-error"></span>
 					<button class="popup__submit-button" type="submit">Создать</button>
