changed constructor parameters in Card class, added display amount of likes

--- a/src/index.html
+++ b/src/index.html
@@ -89,7 +89,7 @@
 				<h2 class="element__place"></h2>
 				<div class="element__like-container">
 					<button class="element__like" type="button"></button>
-					<p class="element__like-counter">0</p>
+					<p class="element__like-counter"></p>
 				</div>
 			</div>
 		</article>
