Created new popupConfirm, added new class for delete button in index.html, added new method into Api, refactored logic in Card.js, and realised logic of deleting cards into index.js

--- a/src/index.html
+++ b/src/index.html
@@ -79,6 +79,17 @@
 			</div>
 		</div>
 
+		<div class="popup popup_confirmation">
+			<div class="popup__overlay popup__overlay_confirmation"></div>
+			<div class="popup__window">
+				<button class="popup__close-button popup__close-button_confirmation" type="button"></button>
+				<h2 class="popup__title">Вы уверены?</h2>
+				<form class="popup__form popup__form_confirmation" name="popup-form-confirmation" novalidate>
+					<button class="popup__submit-button" type="submit">Да</button>
+				</form>
+			</div>
+		</div>
+
 	</div>
 
 	<template id="default-element">
