--- a/src/index.html
+++ b/src/index.html
@@ -83,7 +83,7 @@
 			<div class="popup__overlay popup__overlay_confirmation"></div>
 			<div class="popup__window">
 				<button class="popup__close-button popup__close-button_confirmation" type="button"></button>
-				<h2 class="popup__title">Вы уверены?</h2>
+				<h2 class="popup__title popup__title_confirmation">Вы уверены?</h2>
 				<form class="popup__form popup__form_confirmation" name="popup-form-confirmation" novalidate>
 					<button class="popup__submit-button" type="submit">Да</button>
 				</form>
