added request updateAvatar, added logic in UserInfo with setAvatarInfo with adding in Promise.all, added popup_avatar layout

--- a/src/index.html
+++ b/src/index.html
@@ -90,6 +90,20 @@
 			</div>
 		</div>
 
+		<div class="popup popup_avatar">
+			<div class="popup__overlay popup__overlay_avatar"></div>
+			<div class="popup__window">
+				<button class="popup__close-button popup__close-button_avatar" type="button"></button>
+				<h2 class="popup__title">Обновить аватар</h2>
+				<form class="popup__form popup__form_avatar" name="popup-form-avatar" novalidate>
+					<input type="text" class="popup__input popup__input_data_avatar" name="avatar" id="avatar-input"
+						placeholder="Ссылка на аватар" required>
+					<span class="popup__input-error avatar-input-error"></span>
+					<button class="popup__submit-button" type="submit">Сохранить</button>
+				</form>
+			</div>
+		</div>
+
 	</div>
 
 	<template id="default-element">
