added logic of update avatar(popupAddAvatar) add layout and styles for avatar shell

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,9 @@
 
 		<main class="content">
 			<section class="profile">
-				<img class="profile__avatar" src="<%=require('./images/Avatar.png')%>" alt="Аватар">
+				<div class="profile__avatar-shell">	
+					<img class="profile__avatar" src="<%=require('./images/Avatar.png')%>" alt="Аватар">
+				</div>
 				<div class="profile__profile-info">
 					<div class="profile__name-change">
 						<h1 class="profile__name">Жак-Ив Кусто</h1>
