--- a/src/index.html
+++ b/src/index.html
@@ -22,10 +22,10 @@
 				</div>
 				<div class="profile__profile-info">
 					<div class="profile__name-change">
-						<h1 class="profile__name">Жак-Ив Кусто</h1>
+						<h1 class="profile__name">Gleb Bychkov</h1>
 						<button class="profile__edit-button" type="button"></button>
 					</div>
-					<p class="profile__activity">Исследователь океана</p>
+					<p class="profile__activity">Developer</p>
 				</div>
 				<button class="profile__add-button" type="button"></button>
 			</section>
@@ -35,7 +35,7 @@
 		</main>
 
 		<footer class="footer">
-			<p class="footer__copyright">&copy; 2022 Mesto Russia</p>
+			<p class="footer__copyright">&copy; 2022 Gleb Bychkov</p>
 		</footer>
 
 		<div class="popup popup_profile">
@@ -98,7 +98,7 @@
 				<button class="popup__close-button popup__close-button_avatar" type="button"></button>
 				<h2 class="popup__title">Обновить аватар</h2>
 				<form class="popup__form popup__form_avatar" name="popup-form-avatar" novalidate>
-					<input type="text" class="popup__input popup__input_data_avatar" name="avatar" id="avatar-input"
+					<input type="url" class="popup__input popup__input_data_avatar" name="avatar" id="avatar-input"
 						placeholder="Ссылка на аватар" required>
 					<span class="popup__input-error avatar-input-error"></span>
 					<button class="popup__submit-button" type="submit">Сохранить</button>
